<resources>
    <string name="app_name">MOVING VIDEO &amp; LIVE WALLPAPER</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dash">dash</string>
    <string name="exo">exoPlayer</string>
    <string name="downloading">Downloading Start....</string>
    <string name="vid">Video</string>
    <string name="owner_name">Owner Name</string>
    <string name="download">Download</string>
    <string name="tag">Loading video please wait.....</string>
    <string name="load_more_videos">Load More Videos.......</string>
    <string name="real_estate_training_live_at">Real Estate Training Live At    </string>
    <string name="net_work">Net work error, Check your internet connection</string>
    <string name="try_again">Try again</string>
    <string name="video_duration">Video Duration</string>
    <string name="retry">Retry</string>
    <string name="no_internet_connection">Error accur while playing video please check internet connection and retry</string>
    <string name="error">Error While Playing Video</string>
    <string name="go_back">GO Back</string>
    <string name="ad_attribution">Ad</string>
    <string name="sec"> sec</string>
    <string name="search_view_empty">Enter Query First</string>
    <string name="downloading_vid">Downloading Video Of</string>
    <string name="entertainment">Entertainment</string>
    <string name="top_categories">Top Categories</string>
    <string name="cancel">Cancel</string>
    <string name="watch_video">Watch Video</string>
    <string name="watch_tittle">Watch Video To Continue Download</string>
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="admob_native_add">ca-app-pub-3940256099942544/2247696110</string>
    <string name="admob_video_ad">ca-app-pub-3940256099942544/5224354917</string>
</resources>