<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/colorBackground"
    app:cardCornerRadius="@dimen/value_6dp"
    android:layout_margin="@dimen/value_10dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



    <TextView
        android:textColor="?android:attr/textColorPrimary"
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/value_16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/comfortaa_semibold"
        android:text="@string/watch_tittle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/tv_dialog_cancel"
            android:layout_width="@dimen/value_0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/download_shape"
            android:fontFamily="@font/comfortaa_regular"
            android:gravity="center"
            android:textColor="@color/black"
            android:paddingTop="@dimen/value_10dp"
            android:paddingBottom="@dimen/value_10dp"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_watch_video"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/tv_watch_video"
        android:layout_width="@dimen/value_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/download_shape"
        android:gravity="center"
        android:textColor="@color/black"
        android:fontFamily="@font/comfortaa_regular"
        android:paddingTop="@dimen/value_10dp"
        android:paddingBottom="@dimen/value_10dp"
        android:text="@string/watch_video"
        app:layout_constraintBottom_toBottomOf="@+id/tv_dialog_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_dialog_cancel"
        app:layout_constraintTop_toTopOf="@+id/tv_dialog_cancel" />

    <TextView
        android:textColor="?android:attr/textColorPrimary"
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="Download Video"
        android:fontFamily="@font/comfortaa_semibold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>